--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/pwa": "^3.3.5",
     "@types/geojson": "^7946.0.13",
     "@types/leaflet": "^1.9.8",
     "@types/lodash.debounce": "^4.0.9",
