--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.18",
     "nuxt": "^3.8.2",
+    "nuxt-vite": "^0.3.5",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.5",
     "vue": "^3.3.8",
